# AgentSpec-CEN5016

./: .gitignore  .gitmodules  AGENTS.md  Makefile  PLAN.md  README.md  REPRODUCIBILITY.md  pyproject.toml  requirement.txt  run.sh
results/: code_table3.md  embodied_table4.md
src/: code_agent.py  code_evaluate.py  config.py  embodied_evaluate.py  rule.py  util.py
src/agentspec.egg-info/: SOURCES.txt  requires.txt
src/rules/: __init__.py
src/rules/llm/: __init__.py
src/rules/manual/: __init__.py
src/spec_lang/: AgentSpec.g4  AgentSpec.interp  AgentSpec.tokens  AgentSpecLexer.interp  AgentSpecLexer.py  AgentSpecLexer.tokens  AgentSpecListener.py  AgentSpecParser.py  __init__.py  driver.py  test_parse.py
src/spec_lang/rule_examples/: conflict_light_status.ar  inspect_dangerous_command_before_execution.ar
