[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentspec"
version = "0.1.0"
description = "Customizable Runtime Enforcement for Safe and Reliable LLM Agents"
dependencies = [
    "antlr4-python3-runtime==4.13",
    "langchain==0.3.30",
    "langchain-core==0.3.86",
    "langchain-text-splitters==0.3.11",
    "langchain-openai==0.3.35",
    "langchain-community==0.3.31",
    "langchain-experimental==0.3.4",
    "python-dotenv",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"